--- a/src/components/CartItem/CartItem.css
+++ b/src/components/CartItem/CartItem.css
@@ -9,3 +9,7 @@
     display: flex;
     align-items: center;
 }
+.cart-item__delete-icon {
+    margin-left: var(--spacing-ultrasmall);
+    cursor: pointer;
+}
