--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,7 @@ VARIABLES
   --color-white:      #fff;
   --color-dark-blue:  #191A1C;
   --color-cart-blue:  #242529;
+  --color-secondary-text: #505254;
   
   --spacing-ultrasmall: 5px;
   --margin-list:        7px;
